--- a/index.html
+++ b/index.html
@@ -5,16 +5,77 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
-      <p>Gonna look really good really soon.  Been prioritizing group project and will get to this ASAP.</p>
+    <div>
+      <div class="row">
+
+      
+        <div id="player-left" class="left col-md-3">
+          <div class="containerL">
+            <div id="pLTitle">Player Left</div>
+            <div id="pLName"></div>
+            <div id="pLNameInput">
+              <input id="pLInput" class="form-control" type="text">
+              <button id="pLSubmitName">Submit Name</button> 
+            </div>
+            <div id="pLScoreTitle">Wins:</div>
+            <div id="pLScore"></div>
+            <div id="pLProfile"></div>
+
+          </div>
+
+        </div>
+        <div id="game-center" class="middle col-md-6">
+          <div class="inst">
+            <h2 id="begin"></h2>
+            <h2 id="waiting"></h2>
+            <h2 id="gameplay"></h2>
+
+          </div>
+          <div class="imgContainer">
+            <div class="row">
+              <div class="img" id="bomb"><i class="fas fa-bomb"></i></div>
+              <div class="img" id="bone"><i class="fas fa-bone"></i></div>
+              <div class="img" id="book"><i class="fas fa-book"></i></div>
+            </div>  
+          </div>
+          <div id="chatDisplay"></div>
+            <ul id="chat"></ul>
+          <div id="chatDiv">
+            <input id="chatInput" class="form-control" type="text">
+            <button id="submitChat">Type to Chat</button>  
+          </div>
+
+        </div>
+        <div id="player-right" class="right col-md-3">
+          <div class="containerR">
+            <div id="pRTitle">Player Right</div>
+            <div id="pRName"></div>
+            <div id="pRNameInput"></div>
+              <input id="pRInput" class="form-control" type="text">
+              <button id="pRSubmitName">Submit Name</button>                
+            <div id="pRScoreTitle">Wins:</div>
+            <div id="pRScore"></div>
+            <div id="pRProfile"></div>
+            
+
+          </div>
+        </div>
+      </div>  
+
+    </div>  
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+    <script src="assets/app.js"></script>
   </body>
 </html>
