--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         </div>
         <div id="game-center" class="middle col-md-6">
           <div class="inst">
-            <h2 id="begin"></h2>
-            <h2 id="waiting"></h2>
-            <h2 id="gameplay"></h2>
-
+            <h2 id="message">The game will begin when there is a Player Left and Player Right</h2>
           </div>
           <div class="imgContainer">
             <div class="row">
@@ -54,9 +51,10 @@
           <div class="containerR">
             <div id="pRTitle">Player Right</div>
             <div id="pRName"></div>
-            <div id="pRNameInput"></div>
+            <div id="pRNameInput">
               <input id="pRInput" class="form-control" type="text">
-              <button id="pRSubmitName">Submit Name</button>                
+              <button id="pRSubmitName">Submit Name</button> 
+            </div>
             <div id="pRScoreTitle">Wins:</div>
             <div id="pRScore"></div>
             <div id="pRProfile"></div>
